[package]
name = "rawtime"
version = "0.0.9"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Basic timing infrastructure for no_std  platforms"
keywords = ["no_std", "x86", "time", "armv8"]

[dependencies]
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = { version = "0.51", features = ["unstable"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "8.0.0"
tock-registers = "0.8.x"


[target.'cfg(not(target_os = "none"))'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
env_logger = "0.6.0"
